# CubeIsoFinder

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md
include/: cube_parser.hpp
src/: cube_parser.cpp  main.cpp
